color changes and gap fixes

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -9,7 +9,7 @@ window#waybar {
 }
 
 window > box {
-    margin: 5px 5px 0px 5px;
+    margin: 5px 5px 1px 5px;
     border-radius: 5px;
     background-color: rgba(43, 48, 59, 0.5);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
